samples/_failures_safe/1761257515_ccbe06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e8af34d.c: In function ‘main’:
./samples/SAFE/__tmp_0e8af34d.c:172:9: error: expected expression at end of input
  172 |         if (!get_user_input(input_buffer, sizeof(input_buffer)))
      |         ^~
./samples/SAFE/__tmp_0e8af34d.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e8af34d.c:172:9: error: expected declaration or statement at end of input
